examples/agentgateway/gateway.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: argo-rollouts-gateway
  namespace: argo-rollouts
spec:
  gatewayClassName: agentgateway
  listeners:
    - protocol: HTTP
      name: web
      port: 80
