examples/agentgateway/httproute.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argo-rollouts-http-route
  namespace: argo-rollouts
spec:
  parentRefs:
    - name: argo-rollouts-gateway
      namespace: argo-rollouts
  rules:
    - matches:
      backendRefs:
        - name: argo-rollouts-stable-service
          port: 80
        - name: argo-rollouts-canary-service
          port: 80
